# PriceChecker

./: README.md
core/: .gitignore  Cargo.toml
core/service/: Cargo.toml
core/service/src/: config.rs  db.rs  main.rs  service.rs
core/service/src/scrapers/: mod.rs
core/shared/: Cargo.toml
core/shared/src/: lib.rs  model.rs  normalize.rs
core/ui/: Cargo.toml  Trunk.toml  index.html
core/ui/src/: main.rs  ui.rs
core/ui/src/ui/: routing.rs  styles.rs
core/ui/src/ui/pages/: about.rs  home.rs  mod.rs  show_all.rs
