[package]
name = "price-check-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.8"
chrono = "0.4.44"
dotenvy = "0.15.7"
futures = "=0.3.32"
mongodb = "3.5.2"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "gzip", "brotli"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "=1.51.1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tower-http = { version = "0.6.8", features = ["cors"] }
urlencoding = "2.1.3"
price-check-shared = { path = "../shared" }
