[package]
name = "price-check-ui"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.17", features = ["csr"] }
reqwasm = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasm-bindgen = "=0.2.118"
wasm-bindgen-futures = "0.4.68"
web-sys = { version = "=0.3.95", features = ["HtmlInputElement"] }
price-check-shared = { path = "../shared" }
